--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -81,9 +81,10 @@
                             </li>
                             {% endif %}
                             <li class="page-item disabled ">
-                                <a class="page-link btn btn-black rounded-0" href="#">Page {{ page_obj.number }}
+                                <div class="page-link btn btn-black rounded-0">Page {{ page_obj.number }}
                                     of
-                                    {{ page_obj.paginator.num_pages }}.</a>
+                                    {{ page_obj.paginator.num_pages }}.
+                                </div>
                             </li>
                             {% if page_obj.has_next %}
                             <li class="page-item">
