Add products to site

--- a/products/templates/products/edit_product_variation.html
+++ b/products/templates/products/edit_product_variation.html
@@ -86,8 +86,7 @@
                         </td>
 
                         <td>
-                            <a class="text-danger"
-                                href="{% url 'delete_product_variation' var.id product.id %}">Delete</a>
+                            <a class="text-danger" href="{% url 'delete_product_variation' var.id %}">Delete</a>
                         </td>
 
                     </tr>
