--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -73,11 +73,12 @@
                             {% if page_obj.has_previous %}
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?sort={{ current_sorting }}&page=1">&laquo; first</a>
+                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page=1">&laquo;
+                                    first</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?sort={{ current_sorting }}&page={{ page_obj.previous_page_number }}">previous</a>
+                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.previous_page_number }}">previous</a>
                             </li>
                             {% endif %}
                             <li class="page-item disabled ">
@@ -89,11 +90,11 @@
                             {% if page_obj.has_next %}
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?sort={{ current_sorting }}&page={{ page_obj.next_page_number }}">next</a>
+                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.next_page_number }}">next</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?sort={{ current_sorting }}&page={{ page_obj.paginator.num_pages }}&ordering={{ current_sorting }}">last
+                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.paginator.num_pages }}&ordering={{ current_sorting }}">last
                                     &raquo;</a>
                             </li>
                             {% endif %}
