--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <h5 class="text-muted">Add a Product</h5>
+            <h5 class="text-muted">Edit Product</h5>
             <hr>
         </div>
         <div class="d-none d-md-block col-md-6">
