--- a/product_reviews/templates/product_reviews/add_product_review.html
+++ b/product_reviews/templates/product_reviews/add_product_review.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -12,6 +13,8 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
@@ -26,31 +29,28 @@
 
     </div>
 
+    <!-- Add Product Review Form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_product_review' product.id %}" class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
+
+                <!-- Iterate through fields and render using crispy forms -->
                 {% for field in form %}
 
                 {{ field | as_crispy_field }}
 
                 {% endfor %}
 
-
-
-
-
+                <!-- Submit or cancel -->
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'product_detail' product.id %}">Back to
                         Product</a>
                     <button class="btn btn-black rounded-0" type="submit">Add Product Review</button>
                 </div>
-
+            </form>
         </div>
-        </form>
-
-
     </div>
 </div>
 {% endblock %}
