--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -12,6 +13,8 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
@@ -22,29 +25,34 @@
 
     </div>
 
+    <!-- Add Product Form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+
                 {% csrf_token %}
+
+                <!-- Iterate through fields and render using crispy forms -->
                 {% for field in form %}
+
+                <!-- Render standard field for use with custom widget if Image Field -->
                 {% if field.name != 'image' %}
                 {{ field | as_crispy_field }}
+
                 {% else %}
                 {{ field }}
+
                 {% endif %}
                 {% endfor %}
 
-
-
-
-
+                <!-- Submit or Cancel -->
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Add Product</button>
                 </div>
-
+            </form>
         </div>
-        </form>
+
     </div>
 </div>
 {% endblock %}
