--- a/products/templates/products/delete_product_variation.html
+++ b/products/templates/products/delete_product_variation.html
@@ -3,6 +3,7 @@
 {% load review_count %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -13,6 +14,8 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
@@ -25,10 +28,13 @@
             <hr>
         </div>
     </div>
+
+    <!-- Delete Product Variation Confirmation Form -->
     <div class="row">
         <div class="col-12">
             <form method="POST">
                 {% csrf_token %}
+
                 <div class="">
                     <p>Are you sure you want to delete variation <strong>{{ variation.name|title }}</strong> from
                         {{ product.name|title }}?</p>
@@ -40,7 +46,6 @@
         </div>
     </div>
 </div>
-
 
 {% endblock %}
 
