--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -12,6 +13,8 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
@@ -30,29 +33,41 @@
 
     </div>
 
+    <!-- Edit Product Form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
+
+                <!-- Iterate through fields and render using crispy forms -->
                 {% for field in form %}
+
+                <!-- Render standard field for use with custom widget if Image Field -->
                 {% if field.name != 'image' %}
                 {{ field | as_crispy_field }}
+
                 {% else %}
                 {{ field }}
+
                 {% endif %}
                 {% endfor %}
+
+                <!-- Submit or Cancel -->
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Update Product</button>
                 </div>
             </form>
         </div>
+
+        <!-- Current Product Variations Section -->
         <div class="col-12 col-md-6">
 
             <h5 class="text-muted d-md-none">Product Variations</h5>
             <hr class="d-md-none">
 
+            <!-- Table of variations -->
             {% if product.variations.all %}
             <table class="table table-sm">
                 <thead>
@@ -62,6 +77,8 @@
                     </tr>
                 </thead>
                 <tbody>
+
+                    <!-- Iterate through variations to display as table rows -->
                     {% for var in product.variations.all %}
                     <tr>
                         <td>
@@ -71,19 +88,19 @@
                         <td>
                             {{ var.name|capfirst }}
                         </td>
-
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
+
             {% else %}
             <p>No variations of this product found.</p>
             {% endif %}
 
+            <!-- Link to manage product variations -->
             <div class="text-right">
                 <a class="btn btn-black rounded-0" href="{% url 'add_product_variation' product.id %}">Manage Product
                     Variations</a>
-
             </div>
         </div>
     </div>
