--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -3,6 +3,7 @@
 {% load review_count %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -13,8 +14,14 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid">
+
+    <!-- Expanded Single Product Details -->
     <div class="row">
+
+        <!-- Product Image Section -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+
+            <!-- Display image else default to 'no image' -->
             <div class="image-container my-5">
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank">
@@ -27,10 +34,18 @@
                 {% endif %}
             </div>
         </div>
+
+        <!-- Product Details Sections -->
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
+
+                <!-- Product Name -->
                 <p class="mb-0">{{ product.name }}</p>
+
+                <!-- Price -->
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+
+                <!-- Category -->
                 {% if product.category %}
                 <p class="small mt-1 mb-0">
                     <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -38,14 +53,17 @@
                     </a>
                 </p>
                 {% endif %}
+
+                <!-- Rating -->
                 {% if product.rating %}
                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating|floatformat:"1" }} /
                     5</small>
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
-
                 <br>
+
+                <!-- Edit and Delete if user is superuser -->
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -54,12 +72,17 @@
                 </small>
                 {% endif %}
 
+                <!-- Product Description -->
                 <p class="mt-3">{{ product.description }}</p>
+
+                <!-- Add item to bag Form -->
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
+
                     <div class="form-row">
 
-
+                        <!-- Variation Select -->
+                        <!-- Sizes -->
                         {% if product.variations.sizes %}
                         <div class="col-12 mb-3">
                             <p><strong>Size:</strong></p>
@@ -73,6 +96,9 @@
                             </select>
                         </div>
                         {% endif %}
+
+                        <!-- Colour -->
+
                         <!-- {% if product.variations.colours %}
                         <div class="col-12">
                             <p><strong>Colour:</strong></p>
@@ -89,6 +115,8 @@
                             </select>
                         </div>
                         {% endif %} -->
+
+                        <!-- Quantity Section -->
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
@@ -120,6 +148,7 @@
                                 </div>
                             </div>
 
+                            <!-- Add to bag or go back -->
                             <div class="col{% if s %}-12 mt-2{% endif %} d-flex">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
@@ -131,6 +160,8 @@
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
                                     value="Add to Bag">
 
+
+                                <!-- Wishlist icon to display item wishlist status -->
                                 <a href="{% url 'toggle_wishlist' product.id request.path %}" class="mt-5 ml-3">
                                     {% if  product not in wishlist_items %}
                                     <div class="text-black wishlist-icon" title="Add to wishlist">
@@ -142,51 +173,64 @@
                                     </div>
                                     {% endif %}
                                 </a>
-
                             </div>
+
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
 
                         </div>
                 </form>
-
             </div>
         </div>
     </div>
 </div>
 
+<!-- Product Review Section -->
 <div class="row">
     <div class="col-12 col-lg-8 offset-lg-2 text-center">
 
+        <!-- Title and review count -->
         <h2 class="">Reviews({{ product.id|review_count }})</h2>
 
+        <!-- Add review if user logged in -->
         {% if user.is_authenticated %}
         <a href="{% url 'add_product_review' product.id %}">Add Review</a>
         {% endif %}
 
+        <!-- Existing reviews section -->
         <div class="row">
 
+            <!-- Iterate through reviews and display in cards -->
             {% for review in product_reviews %}
 
+            <!-- Check for relevant reviews to product -->
             {% if product.name in review.product.name %}
             <div class="col-md-6 my-4">
                 <div class="card">
                     <div class="card-header">
 
+                        <!-- Title -->
                         <h5 class="card-title">"{{ review.title }}"</h5>
+
+                        <!-- Rating -->
                         <h6 class="card-subtitle mb-2 text-muted">Rating: {{ review.rating }}</h6>
 
+                        <!-- Edit and Delete if user is review author -->
                         {% if user == review.reviewer %}
                         <small class="ml-3">
                             <a href="{% url 'edit_product_review' review.id %}">Edit</a> |
                             <a type="button" class="text-danger" data-toggle="modal"
                                 data-target="#deleteReview{{ review.id }}Modal">Delete</a>
                         </small>
-
                         {% endif %}
+
                     </div>
+
+                    <!-- Review -->
                     <div class="card-body">
                         <p class="card-text">{{ review.review }}</p>
                     </div>
+
+                    <!-- Display review author and date of review -->
                     <div class="card-footer text-muted">
 
                         {% if review.reviewer %}{{ review.reviewer }}{% else %}Anonymous{% endif %} -
@@ -226,28 +270,6 @@
     </div>
 </div>
 </div>
-
-
-<!-- Delete Product Modal -->
-<div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Delete Product!</h5>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure? This action cannot be undone!</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-outline-black rounded-0" data-dismiss="modal">Cancel</button>
-                <a type="button" class="btn btn-danger" href="{% url 'delete_product' product.id %}">Yes, Delete</a>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 {% endblock %}
 
