--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -12,9 +13,13 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid product-container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col text-center mt-5">
             <h2 class="logo-font">Products</h2>
+
+            <!-- Display categories for current search results -->
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                 <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">
@@ -26,10 +31,15 @@
         </div>
     </div>
 
+    <!-- Products section -->
     <div class="row">
         <div class="product-container col-10 offset-1">
+
+            <!-- Products navigation section -->
             <div class="row mt-1 mb-2">
                 <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+
+                    <!-- Sort selector  -->
                     <div class="sort-select-wrapper w-50">
                         <select id="sort-selector"
                             class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
@@ -54,7 +64,10 @@
                         </select>
                     </div>
                 </div>
+
                 <div class="col-12 col-md-6 order-md-first">
+
+                    <!-- Number of products displayed to user -->
                     <p class="text-muted mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
                         <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
@@ -64,6 +77,11 @@
                     </p>
                 </div>
             </div>
+
+            <!-- Product pagination section -->
+
+            <!-- Pagination copied from django documentation and modified with bootstrap classes -->
+            <!-- Page links modified to maintain current product context -->
             <div class="row">
                 <div class="col-12">
 
@@ -73,12 +91,12 @@
                             {% if page_obj.has_previous %}
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page=1">&laquo;
+                                    href="?{% if search_term %}q={{ search_term }}{% endif %}&{% if current_category %}&category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page=1">&laquo;
                                     first</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.previous_page_number }}">previous</a>
+                                    href="?{% if search_term %}q={{ search_term }}{% endif %}&{% if current_category %}&category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.previous_page_number }}">previous</a>
                             </li>
                             {% endif %}
                             <li class="page-item disabled ">
@@ -90,11 +108,11 @@
                             {% if page_obj.has_next %}
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.next_page_number }}">next</a>
+                                    href="?{% if search_term %}q={{ search_term }}{% endif %}&{% if current_category %}&category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.next_page_number }}">next</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link btn btn-outline-black rounded-0"
-                                    href="?{% if current_category %}category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.paginator.num_pages }}&ordering={{ current_sorting }}">last
+                                    href="?{% if search_term %}q={{ search_term }}{% endif %}&{% if current_category %}&category={{ current_category }}{% endif%}&sort={{ current_sorting }}&page={{ page_obj.paginator.num_pages }}&ordering={{ current_sorting }}">last
                                     &raquo;</a>
                             </li>
                             {% endif %}
