--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,8 @@
       <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
-            <input class="form-control border border-black rounded-0" type="text" name="q"
-              placeholder="Search our site">
+            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site"
+              value="{% if search_term %}{{ search_term }}{% endif %}">
             <div class="input-group-append">
               <button class="form-control btn  border border-black rounded-0" type="submit">
                 <span class="icon">
