CLean up code and add docstrings and comments

--- a/products/templates/products/add_product_variation.html
+++ b/products/templates/products/add_product_variation.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <!-- Add Product Variation Form -->
+    <!-- Add product variation Form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <span>
@@ -55,7 +55,7 @@
                 {% endif %}
                 {% endfor %}
 
-                <!-- Submit or Cancel -->
+                <!-- Submit or cancel -->
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'edit_product' product.id %}">Back to
                         Product</a>
@@ -65,7 +65,7 @@
         </div>
         </form>
 
-        <!-- Current Product Variations Section -->
+        <!-- Current product variations section -->
         <div class="col-12 col-md-6">
 
             <h5 class="text-muted d-md-none">Product Variations</h5>
