--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -25,7 +25,7 @@
 
     </div>
 
-    <!-- Add Product Form -->
+    <!-- Add product form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
@@ -45,7 +45,7 @@
                 {% endif %}
                 {% endfor %}
 
-                <!-- Submit or Cancel -->
+                <!-- Submit or cancel -->
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Add Product</button>
