--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <!-- Delete Product Confirmation Form -->
+    <!-- Delete product confirmation form -->
     <div class="row">
         <div class="col-12">
             <form method="POST">
