--- a/products/templates/products/edit_product_variation.html
+++ b/products/templates/products/edit_product_variation.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <!-- Edit Product Variation Form -->
+    <!-- Edit product variation form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <span>
@@ -54,7 +54,7 @@
                 {% endif %}
                 {% endfor %}
 
-                <!-- Submit or Cancel -->
+                <!-- Submit or cancel -->
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'edit_product' product.id %}">Back to
                         Product</a>
@@ -64,7 +64,7 @@
         </div>
 
 
-        <!-- Current Product Variations Section -->
+        <!-- Current product variations section -->
         <div class="col-12 col-md-6">
 
             <h5 class="text-muted d-md-none">Product Variations</h5>
