--- a/products/templates/products/includes/product_card.html
+++ b/products/templates/products/includes/product_card.html
@@ -3,7 +3,7 @@
 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
     <div class="card h-100 product-card">
 
-        <!-- Product Image Section -->
+        <!-- Product image section -->
         <!-- Display image else default to 'no image' -->
         {% if product.image %}
         <a href="{% url 'product_detail' product.id %}">
@@ -15,13 +15,13 @@
         </a>
         {% endif %}
 
-        <!-- Product Name -->
+        <!-- Product name -->
         <div class="card-body pb-0">
             <hr>
             <p class="mb-1">{{ product.name }}</p>
         </div>
 
-        <!-- Product Details Overview -->
+        <!-- Product details overview -->
         <div class="card-footer pt-0 border-0 text-left">
             <div class="row">
                 <div class="col-8">
@@ -46,7 +46,7 @@
                     <small class="text-muted">No Rating</small>
                     {% endif %}
 
-                    <!-- Edit and Delete if user is superuser -->
+                    <!-- Edit and delete if user is superuser -->
                     {% if request.user.is_superuser %}
                     <br>
                     <small class="ml-3">
@@ -59,7 +59,7 @@
 
                 <!-- Wishlist icon, solid if item in user wishlist -->
                 <div class="col-4 d-flex align-items-center justify-content-center">
-                    <a href="{% url 'toggle_wishlist' product.id request.get_full_path %}">
+                    <a href="{% url 'toggle_wishlist' product.id %}">
                         {% if  product not in wishlist_items %}
                         <div class="text-black wishlist-icon" title="Add to wishlist">
                             <i class="far fa-star fa-3x"></i>
