--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,10 +15,10 @@
 <div class="overlay"></div>
 <div class="container-fluid">
 
-    <!-- Expanded Single Product Details -->
+    <!-- Expanded single product details -->
     <div class="row">
 
-        <!-- Product Image Section -->
+        <!-- Product image section -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
 
             <!-- Display image else default to 'no image' -->
@@ -35,11 +35,11 @@
             </div>
         </div>
 
-        <!-- Product Details Sections -->
+        <!-- Product details sections -->
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
 
-                <!-- Product Name -->
+                <!-- Product name -->
                 <p class="mb-0">{{ product.name }}</p>
 
                 <!-- Price -->
@@ -63,7 +63,7 @@
                 {% endif %}
                 <br>
 
-                <!-- Edit and Delete if user is superuser -->
+                <!-- Edit and delete if user is superuser -->
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -72,7 +72,7 @@
                 </small>
                 {% endif %}
 
-                <!-- Product Description -->
+                <!-- Product description -->
                 <p class="mt-3">{{ product.description }}</p>
 
                 <!-- Add item to bag Form -->
@@ -81,7 +81,7 @@
 
                     <div class="form-row">
 
-                        <!-- Variation Select -->
+                        <!-- Variation select -->
                         <!-- Sizes -->
                         {% if product.variations.sizes %}
                         <div class="col-12 mb-3">
@@ -116,7 +116,7 @@
                         </div>
                         {% endif %} -->
 
-                        <!-- Quantity Section -->
+                        <!-- Quantity section -->
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
@@ -162,7 +162,7 @@
 
 
                                 <!-- Wishlist icon to display item wishlist status -->
-                                <a href="{% url 'toggle_wishlist' product.id request.path %}" class="mt-5 ml-3">
+                                <a href="{% url 'toggle_wishlist' product.id %}" class="mt-5 ml-3">
                                     {% if  product not in wishlist_items %}
                                     <div class="text-black wishlist-icon" title="Add to wishlist">
                                         <i class="far fa-star fa-3x"></i>
@@ -184,7 +184,7 @@
     </div>
 </div>
 
-<!-- Product Review Section -->
+<!-- Product review section -->
 <div class="row">
     <div class="col-12 col-lg-8 offset-lg-2 text-center">
 
@@ -214,7 +214,7 @@
                         <!-- Rating -->
                         <h6 class="card-subtitle mb-2 text-muted">Rating: {{ review.rating }}</h6>
 
-                        <!-- Edit and Delete if user is review author -->
+                        <!-- Edit and delete if user is review author -->
                         {% if user == review.reviewer %}
                         <small class="ml-3">
                             <a href="{% url 'edit_product_review' review.id %}">Edit</a> |
@@ -240,7 +240,7 @@
                 </div>
             </div>
 
-            <!-- Delete Review Modal -->
+            <!-- Delete review modal -->
             <div class="modal fade" id="deleteReview{{ review.id }}Modal" tabindex="-1"
                 aria-labelledby="deleteReview{{ review.id }}ModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
