--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -16,21 +17,28 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col">
             <hr>
             <h2 class="logo-font mb-4">Wishlist</h2>
             <hr>
-
-
         </div>
     </div>
+
+    <!-- Wishlist sections -->
     <div class="row">
+
+        <!-- Check if user has active wishlist -->
         {% if wishlist_items %}
+
+        <!-- Iterate through wishlist and display product cards -->
         {% for product in wishlist_items %}
 
         {% include "products/includes/product_card.html" %}
 
+        <!-- Reponsive horrizontal rule display -->
         {% if forloop.counter|divisibleby:1 %}
         <div class="col-12 d-sm-none mb-5">
             <hr>
