--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,8 @@
 
 <body>
   <header class="container-fluid fixed-top">
+
+    <!-- Top navigation section -->
     <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
       <div class="col-12 col-lg-3 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -59,6 +61,8 @@
 
         </a>
       </div>
+
+      <!-- Search bar -->
       <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
@@ -74,10 +78,13 @@
           </div>
         </form>
       </div>
+
+      <!-- Nav links -->
       <div class="col-12 col-lg-3 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0 pt-2">
-          <li class="list-inline-item dropdown">
 
+          <!-- Account -->
+          <li class="list-inline-item dropdown">
             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center">
@@ -101,8 +108,9 @@
               {% endif %}
             </div>
           </li>
-          <li class="list-inline-item">
 
+          <!-- Wishlist -->
+          <li class="list-inline-item">
             <a class="text-black nav-link" href="{% url 'wishlist' %}">
               <div class="text-center">
                 <div>
@@ -111,10 +119,10 @@
                 <p class="my-0">Wishlist</p>
               </div>
             </a>
-
           </li>
-          <li class="list-inline-item">
 
+          <!-- Shopping bag -->
+          <li class="list-inline-item">
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
               href="{% url 'view_bag' %}">
               <div class="text-center">
@@ -130,11 +138,12 @@
                 </p>
               </div>
             </a>
-
           </li>
         </ul>
       </div>
     </div>
+
+    <!-- Product navigation section -->
     <div class="row bg-white">
       <nav class="navbar navbar-expand-lg navbar-light w-100">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -152,6 +161,7 @@
     </div>
   </header>
 
+  <!-- Messages seciton  -->
   {% if messages %}
   <div class="message-container">
     {% for message in messages %}
