--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,7 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
+
+        <!-- Home -->
         <li class="nav-item d-block d-md-none">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
                 Home
@@ -7,6 +9,7 @@
             <hr class="w-50 float-left m-0">
         </li>
 
+        <!-- All products menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -20,6 +23,7 @@
             </div>
         </li>
 
+        <!-- Hardware menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="hardware-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,6 +37,7 @@
             </div>
         </li>
 
+        <!-- Clothing menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,6 +52,7 @@
             </div>
         </li>
 
+        <!-- Outdoor / lifestyle menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="outdoor-lifestyle-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -58,6 +64,8 @@
                 <a href="{% url 'products' %}?category=tech_gadgets" class="dropdown-item ">Tech / Gadgets</a>
             </div>
         </li>
+
+        <!-- Brands menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="outdoor-lifestyle-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
