--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -1,7 +1,10 @@
+<!-- Update quantity of product form -->
 <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
     {% csrf_token %}
     <div class="form-group">
         <div class="input-group input-group-{{ item.item_id }}">
+
+            <!-- Decrement button -->
             <div class="input-group-prepend">
                 <button class="decrement-qty btn btn-sm btn-black rounded-0 decrement-qty_{{ item.item_id }} 
                     {% if item.size %}decrement-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
@@ -11,10 +14,14 @@
                     </span>
                 </button>
             </div>
+
+            <!-- Item quantity display -->
             <input class="form-control form-control-sm qty_input id_qty_{{ item.item_id }} 
                 {% if item.size %}size_{{ item.item_id }}_{{ item.size }}{% endif %}" type="number" name="quantity"
                 value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id }}"
                 data-size="{{ item.size }}">
+
+            <!-- Increment button -->
             <div class="input-group-append">
                 <button class="increment-qty btn btn-sm btn-black rounded-0 increment-qty_{{ item.item_id }} 
                     {% if item.size %}increment-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
@@ -24,12 +31,16 @@
                     </span>
                 </button>
             </div>
+
+            <!-- Hidden input to pass product variation to back end -->
             {% if item.product.variations.all %}
             <input type="hidden" name="product_size" value="{{ item.size }}">
             {% endif %}
         </div>
     </div>
 </form>
+
+<!-- Update or remove item -->
 <a class="update-link text-info"><small>Update</small></a>
 <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"
     data-product_size="{{ item.size }}"><small>Remove</small></a>
