Add tag line to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,11 +18,13 @@
     <div class="row h-100">
         <div class="col-12 my-auto pb-5 text-center">
             <div class="my-5">
-                <h4>
+
+                <h1 class="logo-font text-black mt-n5 mb-4">The Great Outdoors is Waiting</h1>
+
+                <h4 class="mt-2">
                     <a href="{% url 'products' %}"
                         class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Browse The Store</a>
                 </h4>
-
             </div>
         </div>
     </div>
