--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
         <div class="col-12 my-auto pb-5 text-center">
             <div class="my-5">
 
-                <h1 class="logo-font text-black mt-n5 mb-4">The Great Outdoors is Waiting</h1>
+                <h1 class="logo-font text-white text-shadow mt-n5 mb-4">The Great Outdoors is Waiting</h1>
 
                 <h4 class="mt-2">
                     <a href="{% url 'products' %}"
