--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Store speciallising in watersports and ourdoor lifestyle equipment and clothing">
   {% endblock %}
 
   {% block extra_meta %}{% endblock %}
@@ -58,7 +59,7 @@
             <strong>Sea
             </strong>& <strong>Shore</strong>
           </h2>
-          
+
         </a>
       </div>
 
@@ -69,7 +70,8 @@
             <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site"
               value="{% if search_term %}{{ search_term }}{% endif %}">
             <div class="input-group-append">
-              <button class="form-control btn  border border-black rounded-0" type="submit">
+              <button class="form-control btn  border border-black rounded-0" type="submit"
+                aria-label="search-products">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
