--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,20 +9,6 @@
             <hr class="w-50 float-left m-0">
         </li>
 
-        <!-- All products menu -->
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
-            </div>
-        </li>
-
         <!-- Hardware menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="hardware-link"
@@ -67,14 +53,28 @@
 
         <!-- Brands menu -->
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="outdoor-lifestyle-link"
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="brands-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Brands
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="outdoor-lifestyle-link">
+            <div class="dropdown-menu border-0" aria-labelledby="brands-link">
                 {% for brand in brands %}
                 <a href="{% url 'products' %}?brand={{ brand }}" class="dropdown-item">{{ brand.lower|capfirst }}</a>
                 {% endfor %}
+            </div>
+        </li>
+
+        <!-- All products menu -->
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All Products
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
