--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,85 +1,88 @@
-<li class="list-inline-item">
+<ul>
+    <li class="list-inline-item">
 
-    <!-- Mobile search bar section -->
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <div>
-                <i class="fas fa-search fa-2x"></i>
-            </div>
-        </div>
-    </a>
-    <!-- Mobile search bar -->
-    <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-        <form class="form" method="GET" action="">
-            <div class="input-group w-100">
-                <input class="form-control border border-black rounded-0" type="text" name="q"
-                    placeholder="Search our site">
-                <div class="input-group-append">
-                    <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
-                        <span class="icon">
-                            <i class="fas fa-search fa-lg"></i>
-                        </span>
-                    </button>
+        <!-- Mobile search bar section -->
+        <a class="text-black nav-link d-block d-lg-none" id="mobile-search" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            <div class="text-center">
+                <div>
+                    <i class="fas fa-search fa-2x"></i>
                 </div>
             </div>
-        </form>
-    </div>
-</li>
-
-<!-- Mobile nav links -->
-<!-- Account -->
-<li class="list-inline-item dropdown">
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <div>
-                <i class="fas fa-user fa-2x"></i>
-            </div>
-            <!-- <p class="my-0">Account</p> -->
+        </a>
+        <!-- Mobile search bar -->
+        <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+            <form class="form" method="GET" action="">
+                <div class="input-group w-100">
+                    <input class="form-control border border-black rounded-0" type="text" name="q"
+                        placeholder="Search our site">
+                    <div class="input-group-append">
+                        <button class="form-control form-control btn btn-black border border-black rounded-0"
+                            type="submit">
+                            <span class="icon">
+                                <i class="fas fa-search fa-lg"></i>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </a>
-    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-        {% if request.user.is_authenticated %}
-        {% if request.user.is_superuser %}
-        <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
-        {% endif %}
-        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-        {% else %}
-        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-        {% endif %}
-    </div>
-</li>
+    </li>
 
-<!-- Wishlist -->
-<li class="list-inline-item">
-    <a class="text-black nav-link d-block d-lg-none" href="">
-        <div class="text-center">
-            <div>
-                <i class="fas fa-star fa-2x"></i>
+    <!-- Mobile nav links -->
+    <!-- Account -->
+    <li class="list-inline-item dropdown">
+        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div>
+                    <i class="fas fa-user fa-2x"></i>
+                </div>
+                <!-- <p class="my-0">Account</p> -->
             </div>
-            <!-- <p class="my-0">Wishlist</p> -->
+        </a>
+        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+            {% if request.user.is_authenticated %}
+            {% if request.user.is_superuser %}
+            <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
+            {% endif %}
+            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+            {% else %}
+            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+            {% endif %}
         </div>
-    </a>
-</li>
+    </li>
 
-<!-- Shopping bag -->
-<li class="list-inline-item">
-    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
-        href="{% url 'view_bag' %}">
-        <div class="text-center">
-            <div>
-                <i class="fas fa-shopping-bag fa-2x"></i>
+    <!-- Wishlist -->
+    <li class="list-inline-item">
+        <a class="text-black nav-link d-block d-lg-none" href="">
+            <div class="text-center">
+                <div>
+                    <i class="fas fa-star fa-2x"></i>
+                </div>
+                <!-- <p class="my-0">Wishlist</p> -->
             </div>
-            <!-- <p class="my-0">
+        </a>
+    </li>
+
+    <!-- Shopping bag -->
+    <li class="list-inline-item">
+        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
+            href="{% url 'view_bag' %}">
+            <div class="text-center">
+                <div>
+                    <i class="fas fa-shopping-bag fa-2x"></i>
+                </div>
+                <!-- <p class="my-0">
                 {% if grand_total %}
                 £{{ grand_total|floatformat:2 }}
                 {% else %}
                 £0.00
                 {% endif %}
             </p> -->
-        </div>
-    </a>
-</li>
+            </div>
+        </a>
+    </li>
+</ul>
