--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -106,19 +106,22 @@
                                         <div class="input-group-prepend">
                                             <button
                                                 class="decrement-qty btn btn-black rounded-0 decrement-qty_{{ product.id }}"
-                                                data-item_id="{{ product.id }}">
+                                                data-item_id="{{ product.id }}" aria-label="decrement-button">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
-                                            name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}" data-item_id="{{ product.id }}">
+                                        <label hidden>Item Quantity
+                                            <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
+                                                name="quantity" value="1" min="1" max="99"
+                                                data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}"
+                                                data-item_id="{{ product.id }}">
+                                        </label>
                                         <div class="input-group-append">
                                             <button
                                                 class="increment-qty btn btn-black rounded-0 increment-qty_{{ product.id }}"
-                                                data-item_id="{{ product.id }}">
+                                                data-item_id="{{ product.id }}" aria-label="increment-button">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
@@ -143,7 +146,8 @@
 
 
                                 <!-- Wishlist icon to display item wishlist status -->
-                                <a href="{% url 'toggle_wishlist' product.id %}" class="mt-5 ml-3">
+                                <a href="{% url 'toggle_wishlist' product.id %}" class="mt-5 ml-3"
+                                    aria-label="wishlist-toggle">
                                     {% if  product not in wishlist_items %}
                                     <div class="text-black wishlist-icon" title="Add to wishlist">
                                         <i class="far fa-star fa-3x"></i>
