--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,8 +2,8 @@
     <li class="list-inline-item">
 
         <!-- Mobile search bar section -->
-        <a class="text-black nav-link d-block d-lg-none" id="mobile-search" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
+        <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div>
                     <i class="fas fa-search fa-2x"></i>
